04/03/2004 0.0.1 first public release
- all the bugs are here :)