@@ -1,2 +1,3 @@
+- netin/out plugins for network transparency notification
 04/03/2004 0.0.1 first public release
 - all the bugs are here :)
